--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@portabletext/react": "^3.2.0",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^3.72.1",
+    "@vidstack/react": "^1.12.12",
     "gsap": "^3.12.7",
     "next": "15.1.6",
     "next-sanity": "^9.8.47",
-    "plyr-react": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-lightbox": "^5.1.4",
     "sanity": "^3.72.1",
     "sanity-plugin-media": "^2.3.2",
     "sanity-plugin-singleton-tools": "^1.1.0",
